<resources>
    <string name="app_name">GpsTracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="track_color">Track color</string>
    <string name="location_dialog_massage">вы хотите включить GPS?</string>
    <string name="location_disabled">Gps выключен, включите Gps</string>
    <string name="track_color_summary">Choose track color</string>
</resources>